@@ -1,4 +1,4 @@
-.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "9.4.1"
+.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "9.6.0m1"
 .SH NAME
 phoronix-test-suite \- The Phoronix Test Suite is an extensible open-source platform for performing testing and performance evaluation.
 .SH SYNOPSIS
@@ -230,6 +230,9 @@ This option can be used for validating a Phoronix Test Suite test profile as bei
 This option can be used for validating a Phoronix Test Suite test suite as being compliant against the OpenBenchmarking.org specification.
 .TP
 .SH RESULT MANAGEMENT
+.B analyze-run-times [Test Result]
+This option will read a saved test results file and print the statistics about how long the testing took to complete.
+.TP
 .B auto-sort-result-file [Test Result]
 This option is used if you wish to automatically attempt to sort the results by their result identifier string.
 .TP
